--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fitness</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <header class="header">
         <!-- logo -->
         <div class="left">
-            <img src="img/1.jpg" alt="error">
+            <img src="1.jpg" alt="error">
             deep's gym
         </div>
         <!-- navbar -->
