--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <!-- logo -->
         <div class="left">
-            <img src="1.jpg" alt="error">
+            <img src="1.JPG alt="error">
             deep's gym
         </div>
         <!-- navbar -->
